# yeshuman-agent-stack

./: .cursorrules  .gitignore  ARCHITECTURE_SPEC.md  DJANGO_APP_STRUCTURE_PLAN.md  EMPLOYER_ORGANISATION_IMPLEMENTATION_SUMMARY.md  ENVIRONMENT_VARIABLES.md  MCP_BRIDGE_README.md  MULTI_TENANT_CONFIG.md  README.md  ROLE_BASED_API_REPORT.md  package.json  shared-config.d.ts  test_agent_interaction.py  test_agent_system.py  test_client_config.py  test_frontend_config.js  test_multiturn.py
api/: README.md  client-config.json  conftest.py  env.example  manage.py  mcp.json  mcp_bridge.js  mcp_bridge.sh  mcp_client.py  mcp_stdio_bridge.py  package.json  pyproject.toml  pytest.ini  railway.toml  reset_db.sh  test_memory.py  test_simple.py  test_thinking.py  test_thread_endpoints.py  watch_tests.sh
api/a2a/: agent_cards.py  api.py  apps.py  async_tasks.py  models.py
api/a2a/migrations/: 0001_initial.py  0002_a2amessage_callback_url_a2amessage_delivery_attempts_and_more.py
api/agent/: __init__.py  api.py  checkpointer.py  graph.py  mapper.py  workflow.py
api/agent/services/: __init__.py  events.py  memory.py  prompt.py  (+3 more)
api/agents/: agent.py
api/auth/: __init__.py  apps.py  backends.py  example_usage.py  middleware.py  middleware_django.py  models.py  urls.py  user_backends.py
api/mcp/: api.py  server.py  sse.py
api/streaming/: __init__.py  generators.py  service.py
api/tests/: test_a2a.py  test_agent.py  test_agent_system_integration.py  test_api.py  test_auth.py  test_checkpointer.py  test_mcp_server.py  test_mcp_sse.py  test_multi_consumer_streaming.py  test_real_functionality.py  test_real_langgraph.py  test_streaming.py  test_thread_integration.py  test_thread_system.py  test_urls_smoke.py
api/threads/: models.py  services.py
api/tools/: agent_tools.py  compositions.py  utilities.py
api/utils/: __init__.py  sse.py
api/yeshuman/: api.py  asgi.py  middleware.py  settings.py  settings.py.bak  urls.py  wsgi.py
server/: .gitignore  demo_message.py  demo_thinking.py  demo_voice.py  fastapi_dev_server.py  langgraph.json  langgraph_app.py  manage.py  pyproject.toml  pytest.ini  reset.sh  test_langgraph_studio.py  test_model.py
server/agent/: __init__.py  agent.py  apps.py  generators.py  graphs.py  instructors.py
server/bookedai/: README.md  api.py  asgi.py  settings.py  urls.py  wsgi.py
server/chats/: models.py  services.py
server/tests/: conftest.py  test_api_integration.py  test_graphs.py  test_instructors.py  test_models.py  test_services.py  test_sse_real.py  test_streaming.py
(+222 files in other folders)
