[project]
name = "yeshuman-api"
version = "0.1.0"
description = "YesHuman Agent Stack API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-ninja>=1.4.3",
    "langgraph>=0.6.5",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.1.0",
    "daphne>=4.2.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-watch>=4.2.0",
    "pytest-asyncio>=0.24.0",
]
